# boot

./: .gitignore  .gitmodules  Makefile.am  configure.ac  openbios.mk  syslinux-bios.mk  syslinux-efi32.mk  syslinux-efi64.mk
amd64-pc/: .gitignore  Makefile.am  config.mak.in
x86-pc/: Makefile.am  config.mak.in  config.xml.in  stage1.cfg
